Thu Mar  6 16:19:36 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug with linedit when environment varirable LINEDIT=no

Wed Feb  5 15:16:37 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* fix bugs in the FD solver

Fri Nov 22 19:47:45 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* set socket option SO_REUSEADDR at socket creation

Thu Nov 21 16:29:57 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* support for alternate Prolog file extension .prolog

Mon Nov 18 18:32:44 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in atoms for 1-char atom '\0' (now acts as the empty atom)

Tue Nov 12 10:17:10 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* fix problems with Apple gcc = LLVM version 5.0 (clang-500.2.79)
	* remove clang warnings (uninitialized variables)
	* fix bugs in the lexer of the form 0bop 2 when bop is an infix op

Tue Oct  1 09:40:31 CEST 2013 <Daniel.Diaz@univ-paris1.fr>

	* fix terminal ANSI sequence handling in linedit

Wed Sep 18 09:25:06 CEST 2013 <Daniel.Diaz@univ-paris1.fr>

	* increase internal compiler data sizes

Thu Jul  4 13:17:07 CEST 2013 <Daniel.Diaz@univ-paris1.fr>

	* fix bug in gprolog.h (invalid 64 bits PL_MAX_INTEGER)

Fri Apr 12 17:17:50 CEST 2013 <Daniel.Diaz@univ-paris1.fr>

	* add Prolog flags c_cc_version_data
	* fix a regression bug in linedit
	* fix a little bug in the debugger
	* add subtract/3 built-in predicate

Wed Mar 27 16:35:02 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* add new C foreign interface functions converting term to/from C strings

Tue Mar 26 10:23:05 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* modify top-level banner to show 32/64 bits, compile date, compiler name
	* modify Linedit: fix Prolog prompt when Linedit is not activated
	* modify linedit: accept gui=silent in env var LINEDIT
	  (does not warn if the windows gui DLL is not found)
	* fixes for Windows 8 (i686 and x86_64) with MSVS 2012, mingw64 gcc > 4.5.3
	* add Prolog flags address_bits, compiled_at, c_cc, c_cflags, c_ldflags
